work on landing page

--- a/landing.html
+++ b/landing.html
@@ -1,1 +1,31 @@
-wrgwrher
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./landing.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
+    />
+    <title>Augusta</title>
+  </head>
+  <header>
+    <button>Iniciar Sesion</button>
+    <button>Registrarse</button>
+    <input type="text" />
+  </header>
+  <aside>
+    <img src="" alt="menuHamb" />
+    <button></button>
+  </aside>
+  <body>
+    <h1>Augusta Accesorios</h1>
+    <img src="" alt="fondo" />
+  </body>
+  <footer>
+    <i class="lab la-whatsapp"></i>
+    <i class="lab la-instagram"></i>
+    <p>Rosario, Santa Fe</p>
+  </footer>
+</html>
