--- a/landing.html
+++ b/landing.html
@@ -10,18 +10,20 @@
     />
     <title>Augusta</title>
   </head>
-  <header>
-    <button>Iniciar Sesion</button>
-    <button>Registrarse</button>
-    <input type="text" />
-  </header>
-  <aside>
-    <img src="" alt="menuHamb" />
-    <button></button>
-  </aside>
   <body>
-    <h1>Augusta Accesorios</h1>
-    <img src="" alt="fondo" />
+    <header>
+      <button>Iniciar Sesion</button>
+      <button>Registrarse</button>
+      <input type="text" />
+    </header>
+    <aside>
+      <img src="" alt="menuHamb" />
+      <button></button>
+    </aside>
+    <main>
+      <h1>Augusta Accesorios</h1>
+      <img src="" alt="fondo" />
+    </main>
   </body>
   <footer>
     <i class="lab la-whatsapp"></i>
