--- a/landing.html
+++ b/landing.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./landing.css" />
     <link
       rel="stylesheet"
       href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
     />
+    <link rel="stylesheet" type="text/css" href="./landing.css" />
     <title>Augusta</title>
   </head>
   <body>
     <header>
-      <button>Iniciar Sesion</button>
-      <button>Registrarse</button>
+      <button class="button-header">Iniciar Sesion</button>
+      <button class="button-header">Registrarse</button>
       <input type="text" />
     </header>
-    <aside>
+    <aside class="sideBar">
       <img src="" alt="menuHamb" />
       <button></button>
     </aside>
