advanced with css in landing page

--- a/landing.html
+++ b/landing.html
@@ -7,22 +7,26 @@
       rel="stylesheet"
       href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
     />
+  </head>
     <link rel="stylesheet" type="text/css" href="./landing.css" />
+    <link rel="stylesheet" href="./reset.css" />
     <title>Augusta</title>
   </head>
   <body>
     <header>
       <button class="button-header">Iniciar Sesion</button>
       <button class="button-header">Registrarse</button>
-      <input type="text" />
     </header>
+    <div class="input">
+      <input type="text" />
+      <img src="./Assets/Icon.png" alt="lupa" class="lupaInput" />
+    </div>
     <aside class="sideBar">
-      <img src="" alt="menuHamb" />
-      <button></button>
+      <img src="./Assets/Icon (1).png" alt="menuHamb" class="menuHamb" />
     </aside>
     <main>
-      <h1>Augusta Accesorios</h1>
-      <img src="" alt="fondo" />
+      <h1 class="tittle">Augusta Accesorios</h1>
+      <img src="./Assets/Ellipse 5.png" alt="fondo" class="fotoFondo" />
     </main>
   </body>
   <footer>
