--- a/landing.html
+++ b/landing.html
@@ -7,7 +7,6 @@
       rel="stylesheet"
       href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
     />
-  </head>
     <link rel="stylesheet" type="text/css" href="./landing.css" />
     <link rel="stylesheet" href="./reset.css" />
     <title>Augusta</title>
@@ -34,16 +33,22 @@
     <!--About us-->
     <section>
       <h2>Sobre Nosotros</h2>
-      <p class="lorem">Lorem ipsum dolor sit amet consectetur adipiscing elit, urna consequat felis vehicula class ultricies mollis
-      dictumst, aenean non a in donec nulla. Phasellus ante pellentesque erat cum risus consequat imperdiet aliquam,
-      integer placerat et turpis mi eros nec lobortis taciti, vehicula nisl litora tellus ligula porttitor metus.
-      Vivamus integer non suscipit taciti mus etiam at primis tempor sagittis sit, euismod libero facilisi aptent
-      elementum felis blandit cursus gravida sociis erat ante, eleifend lectus nullam dapibus netus feugiat curae 
-      curabitur est ad. Massa curae fringilla porttitor quam sollicitudin iaculis aptent leo ligula euismod dictumst,
-      orci penatibus mauris eros etiam praesent erat volutpat posuere hac. Metus fringilla nec ullamcorper odio aliquam
-      lacinia conubia mauris tempor, etiam ultricies proin quisque lectus sociis id tristique, integer phasellus taciti
-      pretium adipiscing tortor sagittis ligula.
-        </p>
+      <p class="lorem">
+        Lorem ipsum dolor sit amet consectetur adipiscing elit, urna consequat
+        felis vehicula class ultricies mollis dictumst, aenean non a in donec
+        nulla. Phasellus ante pellentesque erat cum risus consequat imperdiet
+        aliquam, integer placerat et turpis mi eros nec lobortis taciti,
+        vehicula nisl litora tellus ligula porttitor metus. Vivamus integer non
+        suscipit taciti mus etiam at primis tempor sagittis sit, euismod libero
+        facilisi aptent elementum felis blandit cursus gravida sociis erat ante,
+        eleifend lectus nullam dapibus netus feugiat curae curabitur est ad.
+        Massa curae fringilla porttitor quam sollicitudin iaculis aptent leo
+        ligula euismod dictumst, orci penatibus mauris eros etiam praesent erat
+        volutpat posuere hac. Metus fringilla nec ullamcorper odio aliquam
+        lacinia conubia mauris tempor, etiam ultricies proin quisque lectus
+        sociis id tristique, integer phasellus taciti pretium adipiscing tortor
+        sagittis ligula.
+      </p>
     </section>
   </body>
   <!-- <footer>
