created diferent section about page

--- a/products.html
+++ b/products.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <title>Augusta Accesorios</title>
+      <h1>Augusta Accesorios</h1>
     </header>
     <aside class="sideBar">
       <img src="./Assets/Icon (1).png" alt="menuHamb" class="menuHamb" />
