advanced with login

--- a/landing.html
+++ b/landing.html
@@ -13,8 +13,12 @@
   </head>
   <body>
     <header>
-      <button class="button-header">Iniciar Sesion</button>
-      <button class="button-header">Registrarse</button>
+      <a href="./login.html">
+        <button class="button-header">Iniciar Sesion</button>
+      </a>
+      <a href="./register.html">
+        <button class="button-header">Registrarse</button>
+      </a>
     </header>
     <div class="input">
       <input type="text" />
