--- a/login.html
+++ b/login.html
@@ -21,18 +21,21 @@
       <button class="button-side3">Contacto</button>
     </aside>
     <section>
-      <h1>login</h1>
-      <div>
-        <label for="email">Email</label>
-        <input type="text" />
-      </div>
-      <div>
-        <label for="contraseña">Contraseña</label>
-        <input type="text" />
-      </div>
-      <button>Login</button>
-      <a href="./products.html"></a>
-      <button>Cancel</button>
+      <h1>Login</h1>
+      <form action="form">
+        <div>
+          <label for="email">Email</label>
+          <input type="text" class="input1" />
+        </div>
+        <div>
+          <label for="contraseña">Contraseña</label>
+          <input type="text" class="input2" />
+          <a href="./products.html">
+            <button>Login</button>
+          </a>
+          <button>Cancel</button>
+        </div>
+      </form>
     </section>
     <!-- <footer>
     <a href="www.google.com">
