--- a/register.html
+++ b/register.html
@@ -32,8 +32,12 @@
       <input type="text" />
       <label for="Contraseña"></label>
       <input type="text" />
-      <button>Continuar</button>
-      <button>Cancel</button>
+      <a href="./products.html">
+        <button>Continuar</button>
+      </a>
+      <a href="./landing.html">
+        <button>Cancel</button>
+      </a>
     </main>
     <!-- <footer>
     <a href="www.google.com">
