--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
     />
-    <link rel="stylesheet" type="text/css" href="./landing.css" />
+    <link rel="stylesheet" type="text/css" href="./css/index.css" />
     <link rel="stylesheet" href="./reset.css" />
     <title>Augusta</title>
   </head>
