--- a/html/contact.html
+++ b/html/contact.html
@@ -8,38 +8,32 @@
       href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
     />
     <link rel="stylesheet" type="text/css" href="../css/index.css" />
-    <link rel="stylesheet" type="text/css" href="../css/form.css" />
-    <link rel="stylesheet" href="./reset.css" />
+    <link rel="stylesheet" href="../css/form.css" />
+    <link rel="stylesheet" href="../css/reset.css" />
     <title>Augusta</title>
   </head>
   <body>
     <header>
       <title>Augusta Accesorios</title>
+      <button class="button-header">Iniciar Sesion</button>
+      <button class="button-header">Registrarse</button>
     </header>
     <aside class="sideBar">
       <img src="../Assets/Icon (1).png" alt="menuHamb" class="menuHamb" />
-      <a href="../index.html">
-        <button class="button-side1">Nosotros</button>
-      </a>
-      <a href="./products.html">
-        <button class="button-side2">Productos</button>
-      </a>
-      <a href="./contact.html">
-        <button class="button-side3">Contacto</button>
-      </a>
+      <button class="button-side1">Nosotros</button>
+      <button class="button-side2">Productos</button>
+      <button class="button-side3">Contacto</button>
     </aside>
     <main>
-      <h1>Registrarse</h1>
+      <h1>Contacto</h1>
       <div>
         <label for="nombre">Nombre y Apellido</label>
         <input type="text" class="input1" />
-        <label for="dni">Dni</label>
-        <input type="text" class="input2" />
         <label for="email">Email</label>
+        <input type="text" class="input2" />
+        <label for="comment">Comentario</label>
         <input type="text" class="input3" />
-        <label for="contraseña">Contraseña</label>
-        <input type="text" class="input4" />
-        <a href="../html/products.html">
+        <a href="../index.html">
           <button>Continuar</button>
         </a>
         <a href="../index.html">
@@ -48,13 +42,13 @@
       </div>
     </main>
     <!-- <footer>
-    <a href="www.google.com">
-    <i class="lab la-whatsapp"></i>
-    </a>
-    <a href="www.instagram.com">
-    <i class="lab la-instagram"></i>
-    </a>
-    <p>Rosario, Santa Fe</p>
-  </footer> -->
+      <a href="www.google.com">
+      <i class="lab la-whatsapp"></i>
+      </a>
+      <a href="www.instagram.com">
+      <i class="lab la-instagram"></i>
+      </a>
+      <p>Rosario, Santa Fe</p>
+    </footer> -->
   </body>
 </html>
