--- a/html/login.html
+++ b/html/login.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    rel="stylesheet"
-    href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
+    <rel
+      ="stylesheet"
+      href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
     />
-    <link rel="stylesheet" type="text/css" href="./landing.css" />
-    <link rel="stylesheet" type="text/css" href="./login.css" />
-    <link rel="stylesheet" href="./reset.css" />
+    <link rel="stylesheet" type="text/css" href="../css/index.css" />
+    <link rel="stylesheet" type="text/css" href="../css/form.css" />
+    <link rel="stylesheet" href="../css/reset.css" />
     <title>Augusta</title>
   </head>
   <body>
@@ -15,10 +16,14 @@
       <button class="button-header">Registrarse</button>
     </header>
     <aside class="sideBar">
-      <img src="./Assets/Icon (1).png" alt="menuHamb" class="menuHamb" />
+      <img src="../Assets/Icon (1).png" alt="menuHamb" class="menuHamb" />
       <button class="button-side1">Nosotros</button>
-      <button class="button-side2">Productos</button>
-      <button class="button-side3">Contacto</button>
+      <a href="../html/products.html">
+        <button class="button-side2">Productos</button>
+      </a>
+      <a href="../html/contact.html">
+        <button class="button-side3">Contacto</button>
+      </a>
     </aside>
     <section>
       <h1>Login</h1>
@@ -28,7 +33,7 @@
           <input type="text" class="input1" />
           <label for="contraseña">Contraseña</label>
           <input type="text" class="input2" />
-          <a href="./products.html">
+          <a href="../html/products.html">
             <button>Login</button>
           </a>
           <button>Cancel</button>
