--- a/html/products.html
+++ b/html/products.html
@@ -7,9 +7,9 @@
       rel="stylesheet"
       href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
     />
-    <link rel="stylesheet" type="text/css" href="./landing.css" />
-    <link rel="stylesheet" type="text/css" href="./products.css" />
-    <link rel="stylesheet" href="./reset.css" />
+    <link rel="stylesheet" type="text/css" href="../index.html" />
+    <link rel="stylesheet" type="text/css" href="../css/products.css" />
+    <link rel="stylesheet" href="../css/reset.css" />
     <title>Augusta</title>
   </head>
   <body>
@@ -26,19 +26,19 @@
       <div>
         <img src="./Assets/IMG_20231009_093750_479 1.png" alt="foto1" />
         <label for="description">Descripcion</label>
-        <input type="text" />
+        <input type="text" class="input1" />
         <button>Comprar</button>
       </div>
       <div>
         <img src="./Assets/IMG_20231009_093750_479 1.png" alt="foto1" />
         <label for="description">Descripcion</label>
-        <input type="text" />
+        <input type="text" class="input2" />
         <button>Comprar</button>
       </div>
       <div>
         <img src="./Assets/IMG_20231009_093750_479 1.png" alt="foto1" />
         <label for="description">Descripcion</label>
-        <input type="text" />
+        <input type="text" class="input3" />
         <button>Comprar</button>
       </div>
     </section>
