--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
       href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
     />
     <link rel="stylesheet" type="text/css" href="./css/index.css" />
-    <link rel="stylesheet" href="./reset.css" />
+    <link rel="stylesheet" href="./css/reset.css" />
     <title>Augusta</title>
   </head>
   <body>
     <header>
-      <a href="./login.html">
+      <a href="./html/login.html">
         <button class="button-header">Iniciar Sesion</button>
       </a>
-      <a href="./register.html">
+      <a href="./html/register.html">
         <button class="button-header">Registrarse</button>
       </a>
     </header>
@@ -27,8 +27,12 @@
     <aside class="sideBar">
       <img src="./Assets/Icon (1).png" alt="menuHamb" class="menuHamb" />
       <button class="button-side1">Nosotros</button>
-      <button class="button-side2">Productos</button>
-      <button class="button-side3">Contacto</button>
+      <a href="./html/products.html">
+        <button class="button-side2">Productos</button>
+      </a>
+      <a href="./html/contact.html">
+        <button class="button-side3">Contacto</button>
+      </a>
     </aside>
     <main>
       <h1 class="tittle">Augusta Accesorios</h1>
