advanced with products section

--- a/html/contact.html
+++ b/html/contact.html
@@ -14,9 +14,7 @@
   </head>
   <body>
     <header>
-      <title>Augusta Accesorios</title>
-      <button class="button-header">Iniciar Sesion</button>
-      <button class="button-header">Registrarse</button>
+      <h1>Augusta Accesorios</h1>
     </header>
     <aside class="sideBar">
       <img src="../Assets/Icon (1).png" alt="menuHamb" class="menuHamb" />
@@ -25,7 +23,7 @@
       <button class="button-side3">Contacto</button>
     </aside>
     <main>
-      <h1>Contacto</h1>
+      <h2>Contacto</h2>
       <div>
         <label for="nombre">Nombre y Apellido</label>
         <input type="text" class="input1" />
