--- a/html/products.html
+++ b/html/products.html
@@ -16,40 +16,48 @@
     <header>
       <h1>Augusta Accesorios</h1>
     </header>
+    <img src="../Assets/Arrow 1.png" alt="flechita" class="flecha" />
+    <a href="../index.html">
+      <img src="../Assets/Arrow 3.png" alt="flechita2" class="flecha2" />
+    </a>
     <aside class="sideBar">
-      <img src="./Assets/Icon (1).png" alt="menuHamb" class="menuHamb" />
-      <button class="button-side1">Nosotros</button>
+      <img src="../Assets/Icon (1).png" alt="menuHamb" class="menuHamb" />
+      <a href="../index.html">
+        <button class="button-side1">Nosotros</button>
+      </a>
       <button class="button-side2">Productos</button>
-      <button class="button-side3">Contacto</button>
+      <a href="../html/contact.html">
+        <button class="button-side3">Contacto</button>
+      </a>
     </aside>
     <section>
       <div>
-        <img src="./Assets/IMG_20231009_093750_479 1.png" alt="foto1" />
+        <img src="../Assets/IMG_20231009_093750_479 1.png" alt="foto1" />
         <label for="description">Descripcion</label>
-        <input type="text" class="input1" />
+        <p>Precio</p>
         <button>Comprar</button>
       </div>
       <div>
-        <img src="./Assets/IMG_20231009_093750_479 1.png" alt="foto1" />
+        <img src="../Assets/IMG_20231009_093750_479 1.png" alt="foto1" />
         <label for="description">Descripcion</label>
-        <input type="text" class="input2" />
+        <p>Precio</p>
         <button>Comprar</button>
       </div>
       <div>
-        <img src="./Assets/IMG_20231009_093750_479 1.png" alt="foto1" />
+        <img src="../Assets/IMG_20231009_093750_479 1.png" alt="foto1" />
         <label for="description">Descripcion</label>
-        <input type="text" class="input3" />
+        <p>Precio</p>
         <button>Comprar</button>
       </div>
     </section>
-    <!-- <footer>
-    <a href="www.google.com">
-    <i class="lab la-whatsapp"></i>
-    </a>
-    <a href="www.instagram.com">
-    <i class="lab la-instagram"></i>
-    </a>
-    <p>Rosario, Santa Fe</p>
-  </footer> -->
+    <footer>
+      <a href="www.google.com">
+        <i class="lab la-whatsapp"></i>
+      </a>
+      <a href="www.instagram.com">
+        <i class="lab la-instagram"></i>
+      </a>
+      <p class="ciudad">Rosario, Santa Fe</p>
+    </footer>
   </body>
 </html>
