--- a/index.html
+++ b/index.html
@@ -36,36 +36,22 @@
     </aside>
     <main>
       <h1 class="tittle">Augusta Accesorios</h1>
-      <img src="./Assets/Ellipse 5.png" alt="fondo" class="fotoFondo" />
-    </main>
-    <!--About us-->
-    <section>
-      <h2>Sobre Nosotros</h2>
-      <p class="lorem">
-        Lorem ipsum dolor sit amet consectetur adipiscing elit, urna consequat
-        felis vehicula class ultricies mollis dictumst, aenean non a in donec
-        nulla. Phasellus ante pellentesque erat cum risus consequat imperdiet
-        aliquam, integer placerat et turpis mi eros nec lobortis taciti,
-        vehicula nisl litora tellus ligula porttitor metus. Vivamus integer non
-        suscipit taciti mus etiam at primis tempor sagittis sit, euismod libero
-        facilisi aptent elementum felis blandit cursus gravida sociis erat ante,
-        eleifend lectus nullam dapibus netus feugiat curae curabitur est ad.
-        Massa curae fringilla porttitor quam sollicitudin iaculis aptent leo
-        ligula euismod dictumst, orci penatibus mauris eros etiam praesent erat
-        volutpat posuere hac. Metus fringilla nec ullamcorper odio aliquam
-        lacinia conubia mauris tempor, etiam ultricies proin quisque lectus
-        sociis id tristique, integer phasellus taciti pretium adipiscing tortor
-        sagittis ligula.
+      <h2>Nosotros</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit,
+        temporibus numquam. Pariatur quisquam praesentium a aliquid dolorum.
+        Culpa dolorum, sit sequi minima quidem vero, reprehenderit, est harum
+        pariatur vel fugit.
       </p>
-    </section>
+    </main>
+    <footer>
+      <a href="www.google.com">
+        <i class="lab la-whatsapp"></i>
+      </a>
+      <a href="www.instagram.com">
+        <i class="lab la-instagram"></i>
+      </a>
+      <p class="ciudad">Rosario, Santa Fe</p>
+    </footer>
   </body>
-  <!-- <footer>
-    <a href="www.google.com">
-    <i class="lab la-whatsapp"></i>
-    </a>
-    <a href="www.instagram.com">
-    <i class="lab la-instagram"></i>
-    </a>
-    <p>Rosario, Santa Fe</p>
-  </footer> -->
 </html>
