--- a/html/login.html
+++ b/html/login.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <rel
-      ="stylesheet"
+    <link
+      rel="stylesheet"
       href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
     />
     <link rel="stylesheet" type="text/css" href="../css/index.css" />
@@ -27,18 +27,18 @@
     </aside>
     <section>
       <h1>Login</h1>
-      <form action="form">
-        <div>
-          <label for="email">Email</label>
-          <input type="text" class="input1" />
-          <label for="contraseña">Contraseña</label>
-          <input type="text" class="input2" />
-          <a href="../html/products.html">
-            <button>Login</button>
-          </a>
+      <div>
+        <label for="email">Email</label>
+        <input type="text" class="input1" />
+        <label for="contraseña">Contraseña</label>
+        <input type="text" class="input2" />
+        <a href="../html/products.html">
+          <button>Login</button>
+        </a>
+        <a href="../index.html">
           <button>Cancel</button>
-        </div>
-      </form>
+        </a>
+      </div>
     </section>
     <!-- <footer>
     <a href="www.google.com">
