--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@
     </aside>
     <main>
       <h1 class="tittle">Augusta Accesorios</h1>
-      <h2>Nosotros</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit,
-        temporibus numquam. Pariatur quisquam praesentium a aliquid dolorum.
-        Culpa dolorum, sit sequi minima quidem vero, reprehenderit, est harum
-        pariatur vel fugit.
-      </p>
+      <section>
+        <h2>Nosotros</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit,
+          temporibus numquam. Pariatur quisquam praesentium a aliquid dolorum.
+          Culpa dolorum, sit sequi minima quidem vero, reprehenderit, est harum
+          pariatur vel fugit.
+        </p>
+      </section>
     </main>
     <footer>
       <a href="www.google.com">
