advanced with project

--- a/html/contact.html
+++ b/html/contact.html
@@ -23,8 +23,8 @@
       <button class="button-side3">Contacto</button>
     </aside>
     <main>
-      <h2>Contacto</h2>
       <div>
+        <h2>Contacto</h2>
         <label for="nombre">Nombre y Apellido</label>
         <input type="text" class="input1" />
         <label for="email">Email</label>
@@ -39,14 +39,14 @@
         </a>
       </div>
     </main>
-    <!-- <footer>
+    <footer>
       <a href="www.google.com">
-      <i class="lab la-whatsapp"></i>
+        <i class="lab la-whatsapp"></i>
       </a>
       <a href="www.instagram.com">
-      <i class="lab la-instagram"></i>
+        <i class="lab la-instagram"></i>
       </a>
       <p>Rosario, Santa Fe</p>
-    </footer> -->
+    </footer>
   </body>
 </html>
