--- a/html/login.html
+++ b/html/login.html
@@ -14,6 +14,7 @@
     <header>
       <button class="button-header">Iniciar Sesion</button>
       <button class="button-header">Registrarse</button>
+      <h1>Accesorios Augusta</h1>
     </header>
     <aside class="sideBar">
       <img src="../Assets/Icon (1).png" alt="menuHamb" class="menuHamb" />
@@ -25,29 +26,27 @@
         <button class="button-side3">Contacto</button>
       </a>
     </aside>
-    <section>
-      <h1>Login</h1>
-      <div>
-        <label for="email">Email</label>
-        <input type="text" class="input1" />
-        <label for="contraseña">Contraseña</label>
-        <input type="text" class="input2" />
-        <a href="../html/products.html">
-          <button>Login</button>
-        </a>
-        <a href="../index.html">
-          <button>Cancel</button>
-        </a>
-      </div>
-    </section>
-    <!-- <footer>
-    <a href="www.google.com">
-    <i class="lab la-whatsapp"></i>
-    </a>
-    <a href="www.instagram.com">
-    <i class="lab la-instagram"></i>
-    </a>
-    <p>Rosario, Santa Fe</p>
-  </footer> -->
+    <div>
+      <h2>Login</h2>
+      <label for="email">Email</label>
+      <input type="text" class="input1" />
+      <label for="contraseña">Contraseña</label>
+      <input type="text" class="input2" />
+      <a href="../html/products.html">
+        <button>Login</button>
+      </a>
+      <a href="../index.html">
+        <button>Cancel</button>
+      </a>
+    </div>
+    <footer>
+      <a href="www.google.com">
+        <i class="lab la-whatsapp"></i>
+      </a>
+      <a href="www.instagram.com">
+        <i class="lab la-instagram"></i>
+      </a>
+      <p>Rosario, Santa Fe</p>
+    </footer>
   </body>
 </html>
