--- a/html/register.html
+++ b/html/register.html
@@ -14,7 +14,9 @@
   </head>
   <body>
     <header>
-      <title>Augusta Accesorios</title>
+      <button class="button-header">Iniciar Sesion</button>
+      <button class="button-header">Registrarse</button>
+      <h1>Augusta Accesorios</h1>
     </header>
     <aside class="sideBar">
       <img src="../Assets/Icon (1).png" alt="menuHamb" class="menuHamb" />
@@ -29,8 +31,8 @@
       </a>
     </aside>
     <main>
-      <h1>Registrarse</h1>
       <div>
+        <h2>Registrarse</h2>
         <label for="nombre">Nombre y Apellido</label>
         <input type="text" class="input1" />
         <label for="dni">Dni</label>
@@ -47,14 +49,14 @@
         </a>
       </div>
     </main>
-    <!-- <footer>
-    <a href="www.google.com">
-    <i class="lab la-whatsapp"></i>
-    </a>
-    <a href="www.instagram.com">
-    <i class="lab la-instagram"></i>
-    </a>
-    <p>Rosario, Santa Fe</p>
-  </footer> -->
+    <footer>
+      <a href="www.google.com">
+        <i class="lab la-whatsapp"></i>
+      </a>
+      <a href="www.instagram.com">
+        <i class="lab la-instagram"></i>
+      </a>
+      <p>Rosario, Santa Fe</p>
+    </footer>
   </body>
 </html>
