--- a/index.html
+++ b/index.html
@@ -37,12 +37,15 @@
     <main>
       <h1 class="tittle">Augusta Accesorios</h1>
       <section>
-        <h2>Nosotros</h2>
-        <p>
+        <h2 class="nosotros">Nosotros</h2>
+        <p class="lorem">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit,
           temporibus numquam. Pariatur quisquam praesentium a aliquid dolorum.
           Culpa dolorum, sit sequi minima quidem vero, reprehenderit, est harum
-          pariatur vel fugit.
+          pariatur vel fugit. Lorem ipsum dolor sit amet consectetur adipisicing
+          elit. Suscipit, temporibus numquam. Pariatur quisquam praesentium a
+          aliquid dolorum. Culpa dolorum, sit sequi minima quidem vero,
+          reprehenderit, est harum pariatur vel fugit.
         </p>
       </section>
     </main>
@@ -53,7 +56,7 @@
       <a href="www.instagram.com">
         <i class="lab la-instagram"></i>
       </a>
-      <p class="ciudad">Rosario, Santa Fe</p>
+      <p>Rosario, Santa Fe</p>
     </footer>
   </body>
 </html>
