--- a/html/selectedProduct.html
+++ b/html/selectedProduct.html
@@ -8,6 +8,7 @@
       href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
     />
     <link rel="stylesheet" type="text/css" href="../index.html" />
+    <link rel="stylesheet" href="../css/selectedProduct.css" />
     <link rel="stylesheet" type="text/css" href="../css/products.css" />
     <link rel="stylesheet" href="../css/reset.css" />
     <title>Augusta</title>
@@ -30,28 +31,16 @@
         <button class="button-side3">Contacto</button>
       </a>
     </aside>
-    <section>
-      <div>
-        <a href="../html/selectedProduct.html">
-          <img src="../Assets/IMG_20231009_093750_479 1.png" alt="foto1" />
-        </a>
-        <label for="description">Descripcion</label>
-        <p class="precio">Precio</p>
-        <button class="comprar1">Comprar</button>
-      </div>
-      <div>
-        <img src="../Assets/IMG_20231009_093750_479 1.png" alt="foto1" />
-        <label for="description">Descripcion</label>
-        <p class="precio">Precio</p>
-        <button class="comprar1">Comprar</button>
-      </div>
-      <div>
-        <img src="../Assets/IMG_20231009_093750_479 1.png" alt="foto1" />
-        <label for="description">Descripcion</label>
-        <p class="precio">Precio</p>
-        <button class="comprar1">Comprar</button>
-      </div>
-    </section>
+    <div class="contenedor">
+      <img
+        src="../Assets/IMG_20231009_093750_479 1.png"
+        alt="foto2"
+        class="foto2"
+      />
+      <label for="description">Descripcion</label>
+      <p class="precio2">Precio</p>
+      <button class="comprar">Comprar</button>
+    </div>
     <footer>
       <a href="www.google.com">
         <i class="lab la-whatsapp"></i>
